время обработки резьб и чернового торцевания и точения

--- a/Sunduk.PWA/Components/CAM/EditSequenceComponent.razor
+++ b/Sunduk.PWA/Components/CAM/EditSequenceComponent.razor
@@ -660,7 +660,7 @@
                 ThreadPitch = threadCuttingSequence.ThreadPitch;
                 ThreadStart = threadCuttingSequence.StartZ;
                 ThreadEnd = threadCuttingSequence.EndZ;
-                ThreadNPTPlane = threadCuttingSequence.ThreadNPTPlane;
+                ThreadNPTPlane = threadCuttingSequence.ThreadNptPlane;
                 break;
             case TurningExternalGroovingSequence turningExternalGroovingSequence:
                 Tool = turningExternalGroovingSequence.Tool;
