--- a/Sunduk.PWA/Shared/MainLayout.razor
+++ b/Sunduk.PWA/Shared/MainLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inject IDialogService DialogService
 @inherits LayoutComponentBase
+@using MudBlazor.Services
+@implements IAsyncDisposable
 
 <MudScrollToTop>
     <MudFab Color="Color.Primary" Icon="@Icons.Filled.KeyboardArrowUp" />
@@ -17,6 +19,10 @@
                      Icon="fas fa-crutch" Color="@Color.Default" Title="Off"
                      ToggledIcon="fas fa-crutch" ToggledColor="@Color.Primary" ToggledTitle="On"/>
         <MudSpacer />
+        @if (DebugMode)
+        {
+            <MudText>@Breakpoint</MudText>
+        }
         <MudTooltip Text="Обратная связь" Placement="Placement.Start">
             <MudIconButton Icon="@Icons.Material.Filled.Feedback" OnClick="OpenFeedBackDialog" Color="Color.Inherit" Edge="Edge.End" />
         </MudTooltip>
@@ -45,9 +51,41 @@
 
 @code
 {
+    [Inject] IBreakpointService BreakpointListener { get; set; }
+
+    private Guid _subscriptionId;
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            var subscriptionResult = await BreakpointListener.Subscribe((breakpoint) =>
+            {
+                Breakpoint = breakpoint;
+                InvokeAsync(StateHasChanged);
+            }, new ResizeOptions
+            {
+                ReportRate = 250,
+                NotifyOnBreakpointOnly = true,
+            });
+
+            Breakpoint = subscriptionResult.Breakpoint;
+            _subscriptionId = subscriptionResult.SubscriptionId;
+            StateHasChanged();
+        }
+
+        await base.OnAfterRenderAsync(firstRender);
+    }
+
+    public async ValueTask DisposeAsync() => await BreakpointListener.Unsubscribe(_subscriptionId);
+
+    public Breakpoint Breakpoint { get; set; }
+
     string version = System.Reflection.Assembly.GetExecutingAssembly().GetName().Version.ToString();
 
-    public bool ExperimentalMode { get; set; } = true;
+
+    public static bool DebugMode { get; set; } = true;
+    public bool ExperimentalMode { get; set; } = DebugMode ? DebugMode : !DebugMode;
 
     bool _drawerOpen = true;
 
